force-app/main/default/objects/TASKRAY__trBaseline_Task__c/TASKRAY__trBaseline_Task__c.object-meta.xml
<CustomObject>
    <description>This is a TaskRay object used to store historical snapshot information on TaskRay Tasks.</description>
    <label>TaskRay Task Baseline</label>
    <nameField>
        <label>TaskRay Task Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskRay Task Baselines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>