force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__Blocked__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>