force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__List__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__List__c</fullName>
    <label>List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Holding</fullName>
                <color>#DDDDDD</color>
                <default>true</default>
                <label>Holding</label>
            </value>
            <value>
                <fullName>Prioritized</fullName>
                <color>#CC6600</color>
                <label>Prioritized</label>
            </value>
            <value>
                <fullName>Started</fullName>
                <color>#3333FF</color>
                <label>Started</label>
            </value>
            <value>
                <fullName>Finished</fullName>
                <color>#009900</color>
                <label>Finished</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>