force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trActualBusinessDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trActualBusinessDuration__c</fullName>
    <description>Used to track the number of business days that it actually took to complete the task. Calculated as the difference between the task Start Date and the task Actual Completion Date, excluding nonworking days.</description>
    <inlineHelpText>Number of business days that it took to complete the task.</inlineHelpText>
    <label>Actual Business Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>