force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trBaseline_Task_Group__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trBaseline_Task_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Group Baseline</label>
    <referenceTo>TASKRAY__trBaseline_Task_Group__c</referenceTo>
    <relationshipLabel>TaskRay Task Baselines</relationshipLabel>
    <relationshipName>TaskRay_Task_Baselines</relationshipName>
    <type>Lookup</type>
</CustomField>