force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trCompleted__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>