force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trCompletedBehindSchedule2__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trCompletedBehindSchedule2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track whether the task was completed after its scheduled Estimated End Date.</description>
    <inlineHelpText>Indicates whether a task was completed after its scheduled Estimated End Date.</inlineHelpText>
    <label>Completed Behind Schedule</label>
    <type>Checkbox</type>
</CustomField>