force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trDuration__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trDuration__c</fullName>
    <label>Estimated Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>