force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trEndDateVariance__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trEndDateVariance__c</fullName>
    <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTask__r.TASKRAY__Deadline__c), 
ISBLANK(TASKRAY__Deadline__c) 
), 
NULL, 
TASKRAY__trTask__r.TASKRAY__Deadline__c - TASKRAY__Deadline__c)</formula>
    <label>End Date Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>