force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trLongName__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trLongName__c</fullName>
    <formula>$Label.taskray__taskray_baselinetask_longname_prefix +&quot; &quot;+ TEXT(DATEVALUE(CreatedDate))+&quot;: &quot;+ TASKRAY__trTask__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Baseline Long Name</label>
    <type>Text</type>
</CustomField>