force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trStartDateVariance__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trStartDateVariance__c</fullName>
    <formula>IF( 
OR( 
ISBLANK(TASKRAY__trTask__r.TASKRAY__trStartDate__c), 
ISBLANK(TASKRAY__trStartDate__c) 
), 
NULL, 
TASKRAY__trTask__r.TASKRAY__trStartDate__c - TASKRAY__trStartDate__c)</formula>
    <label>Start Date Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>