force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trTask__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trTask__c</fullName>
    <label>Task</label>
    <referenceTo>TASKRAY__Project_Task__c</referenceTo>
    <relationshipLabel>TaskRay Task Baselines</relationshipLabel>
    <relationshipName>TaskRay_Task_Baselines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>