force-app/main/default/objects/TASKRAY__trBaseline_Task__c/fields/TASKRAY__trWasTaskEverBlocked__c.field-meta.xml
<CustomField>
    <fullName>TASKRAY__trWasTaskEverBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track whether a task was ever blocked.</description>
    <inlineHelpText>Indicates whether a task was ever blocked.</inlineHelpText>
    <label>Was Task Ever Blocked?</label>
    <type>Checkbox</type>
</CustomField>